Removed duplicate app entries
The criterion was to pick the entry that had the highest number of reviews.

--- a/Profitable App Profiles for the App Store and Google Play Markets/Basics.ipynb
+++ b/Profitable App Profiles for the App Store and Google Play Markets/Basics.ipynb
@@ -294,8 +294,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Comment:</b> Here, we can see there is 1181 entries will duplicate app names and so we m"
+    "<b>Comment:</b> Here, we can see there is 1181 entries will duplicate app names and so we must remove them and keep the one with the highest number of reviews as that will most likely be the most up to date entry."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we must keep track of each unique app entry and if they have duplicate entries, then we will save the one with the highest number of reviews and remove the rest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique Apps: 9659\n",
+      "Unique Dict: 9659\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keep track of the app name and the highest number of reviews for this app\n",
+    "reviews_max = {}\n",
+    "for app in android_data:\n",
+    "    name = app[0]\n",
+    "    n_reviews = int(app[3])\n",
+    "    \n",
+    "    if name in reviews_max and reviews_max[name] < n_reviews:\n",
+    "        reviews_max[name] = n_reviews\n",
+    "    elif name not in reviews_max:\n",
+    "        reviews_max[name] = n_reviews\n",
+    "\n",
+    "# check if the length of unique keys is equal to the number of unique apps\n",
+    "print(\"Unique Apps:\", len(unique_apps))\n",
+    "print(\"Unique Dict:\", len(reviews_max.keys()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Comment:</b> Now, we should make a clean android dataset with only the unique app entries with the highest number of reviews of each app."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clean Android Dataset Apps: 9659\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make a cleanse version of the android dataset\n",
+    "android_clean = [] # store cleaned dataset\n",
+    "already_added = [] # store app names\n",
+    "\n",
+    "for app in android_data:\n",
+    "    name = app[0]\n",
+    "    n_reviews = int(app[3])\n",
+    "    \n",
+    "    if n_reviews == reviews_max[name] and name not in already_added:\n",
+    "        android_clean.append(app)\n",
+    "        already_added.append(name)\n",
+    "        \n",
+    "# display the length of the new android dataset to confirm that we have removed the duplicates\n",
+    "print(\"Clean Android Dataset Apps:\", len(android_clean))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Removing Non-English Apps "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
