--- a/Analyzing CIA Factbook Data Using SQL/Basics.ipynb
+++ b/Analyzing CIA Factbook Data Using SQL/Basics.ipynb
@@ -588,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Comment:</b> These countries should be correct as they seem to be densely populated countries, especially places like Japan and the UK. This means we should"
+    "<b>Comment:</b> These countries should be correct as they seem to be densely populated countries, especially places like Japan and the UK."
    ]
   }
  ],
